# CMake_Labs

./: feature1
Cmake with AVR LAB_10/: CMakeLists.txt  Makefile  main.cpp
Cmake_LAB_1/: CMakeLists.txt  Makefile
Cmake_LAB_2/: CMakeLists.txt  main.cpp
Cmake_LAB_3/: CMakeLists.txt
Cmake_LAB_3/src/: calc.cpp
Cmake_LAB_4/: CMakeLists.txt  main.cpp
Cmake_LAB_4/include/: calc.hpp
Cmake_LAB_4/lib/: CMakeLists.txt
Cmake_LAB_5/: CMakeLists.txt  defaultconfig.h.in  main.cpp
Cmake_LAB_5/lib/: CMakeLists.txt
Cmake_LAB_6/: CMakeLists.txt  main.cpp
Cmake_LAB_7/: CMakeLists.txt
Cmake_LAB_7/lib/: wifi.cpp
Cmake_LAB_8/: CMakeLists.txt  defaultconfig.h.in
Cmake_LAB_8/include/: wifi.hpp
Cmake_LAB_9/: CMakeLists.txt  main.cpp
